# kirana

./: .gitignore  LICENSE  README.md  global.sh
.github/workflows/: deploy.yml
backend/: poetry.toml  pyproject.toml  requirements.txt  server.py
backend/src/: __init__.py
backend/src/databases/: analytical.py  transactional.py
backend/src/models/: literature.py  quantitative.py  research.py
backend/src/routes/: literature.py  quantitative.py  research.py
backend/src/utils/: binary_convert.py  status_code.py
desktop/: Cargo.toml  tauri.conf.json
frontend/: forge.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/electron/: flask-connector.ts  main.ts
frontend/package/: exclude-lproj.js  include-flask.js
frontend/public/: manifest.json
frontend/src/: _app.tsx
frontend/src/controllers/: hello-controller.ts  research-controller.ts
frontend/src/models/: hello-model.ts  research-model.ts
frontend/src/utils/: names.ts  pagination.ts
frontend/src/views/components/: ConstructEditor.tsx  IndicatorTable.tsx  ObservationTable.tsx  RelationEditor.tsx
frontend/src/views/pages/: create.tsx  index.tsx
web/: docusaurus.config.js  package-lock.json  package.json
